сжатие картинок + фиксы

--- a/aksessuary.html
+++ b/aksessuary.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки, фотокниги и проч.">
-    <title>Фото на документы в Брянске</title>
+    <title>Аксессуары фотосалона Фуджи</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/aksessuary/style.css" />
     <!-- Yandex.Metrika counter -->
@@ -70,7 +70,7 @@
           <img
             class="burger-img"
             id="burger-img"
-            src="source/img/header/burger.svg"
+            src="source/header/burger.svg"
             alt="меню фотоуслуг"
           />
           <div class="burger" id="burger">
@@ -86,7 +86,7 @@
             </nav>
             <img
               class="close-burger-menu burger-cross"
-              src="source/img/header/cross.svg"
+              src="source/header/cross.svg"
               alt="фото в брянске"
             />
           </div>
@@ -114,7 +114,7 @@
                 <div class="block-card">
                   <img
                     class="block-card-img"
-                    src="source/img/accessories/alboms.png"
+                    src="source/aksessuary/img/alboms.png"
                     alt="альбомы"
                   />
                   <p class="block-card-text">Фотоальбомы</p>
@@ -122,7 +122,7 @@
                 <div class="block-card">
                   <img
                     class="block-card-img"
-                    src="source/img/accessories/battaries.png"
+                    src="source/aksessuary/img/battaries.png"
                     alt="батарейки"
                   />
                   <p class="block-card-text">Батарейки</p>
@@ -130,7 +130,7 @@
                 <div class="block-card">
                   <img
                     class="block-card-img"
-                    src="source/img/accessories/photoframe.png"
+                    src="source/aksessuary/img/photoframe.png"
                     alt="фоторамки"
                   />
                   <p class="block-card-text">Фоторамки</p>
