--- a/foto-na-dokumenty.html
+++ b/foto-na-dokumenty.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Сделать срочное фото на документы, на паспорт, на загранпаспорт в Брянске">
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/foto-na-dokumenty/style.css" />
+    <link rel="stylesheet" href="common-style.css" />
+    
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -70,7 +71,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -86,7 +87,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
@@ -116,6 +117,42 @@
               У нас в базе есть формы для всевозможных организаций и служб, а также классические костюмы.
             </p>
             <p class="block-content-text">
+              Мы находимся по адресу: <a class="address" href="index.html#contacts">пр.Ленина 67, Центральны Дом Быта, 2 этаж</a>
+            </p>
+            <div class="map" style="position: relative; overflow: hidden; margin-bottom: calc(80px * var(--size-coeff));">
+              <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
+                    style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
+              <a
+                href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 14px;
+                "
+                >Торговый центр в Брянске</a
+              >
+              <a
+                href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps"
+                style="
+                  color: #eee;
+                  font-size: 12px;
+                  position: absolute;
+                  top: 28px;
+                "
+                >Продажа и аренда коммерческой недвижимости в Брянске</a
+              >
+              <iframe
+                src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC"
+                width="100%"
+                height="380"
+                frameborder="1"
+                allowfullscreen="true"
+                style="position: relative"
+              >
+              </iframe>
+            </div>
+            <p class="block-content-text">
               Печатаем фото блоками в зависимости от формата:
             </p>
           </div>
@@ -123,7 +160,7 @@
             <div class="block-card">
               <img
                 class="block-card-img block-long-card-img"
-                src="source/img/photo-for-documents/pasport-rf.png"
+                src="source/foto-na-dokumenty/img/pasport-rf.png"
                 alt="фото на паспорт"
               />
               <div class="block-card-text block-long-card-text">
@@ -135,7 +172,7 @@
             <div class="block-card">
               <img
                 class="block-card-img block-long-card-img"
-                src="source/img/photo-for-documents/zagran.png"
+                src="source/foto-na-dokumenty/img/zagran.png"
                 alt="фото на загранпаспорт"
               />
               <div class="block-card-text block-long-card-text">
@@ -150,7 +187,7 @@
             <div class="block-card">
               <img
                 class="block-card-img block-long-card-img"
-                src="source/img/photo-for-documents/three-four.png"
+                src="source/foto-na-dokumenty/img/three-four.png"
                 alt="фото 3 на 4"
               />
               <div class="block-card-text block-long-card-text">
@@ -164,7 +201,7 @@
             <div class="block-card">
               <img
                 class="block-card-img block-long-card-img"
-                src="source/img/photo-for-documents/four-six.png"
+                src="source/foto-na-dokumenty/img/four-six.png"
                 alt="фото 4 на 6"
               />
               <div class="block-card-text block-long-card-text">
@@ -179,7 +216,7 @@
             <div class="block-card">
               <img
                 class="block-card-img block-long-card-img"
-                src="source/img/photo-for-documents/unknown.png"
+                src="source/foto-na-dokumenty/img/unknown.png"
                 alt="свой формат фото"
               />
               <div class="block-card-text block-long-card-text">
