--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -85,7 +85,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
@@ -110,12 +110,12 @@
             </h2>
             <img
               class="about-us-planshet"
-              src="source/img/about-us/about-us-planshet.png"
+              src="source/o-nas/img/about-us-planshet.png"
               alt="фото брянска"
             />
             <img
               class="about-us-mobile"
-              src="source/img/about-us/about-us-mobile.png"
+              src="source/o-nas/img/about-us-mobile.png"
               alt="фото брянска"
             />
             <p class="about-us-content-main-text2">
@@ -128,7 +128,7 @@
           </div>
           <img
             class="about-us-img"
-            src="source/img/about-us/about-us1.png"
+            src="source/o-nas/img/about-us1.png"
             alt="фото брянска"
           />
         </div>
@@ -141,7 +141,7 @@
               <li class="contacts-row">
                 <img
                   class="contacts-img"
-                  src="source/img/contacts/phone.svg"
+                  src="source/o-nas/img/phone.svg"
                   alt="телефон фотосалона"
                 />
                 <a class="contacts-text" href="tel:+74832663998"
@@ -152,7 +152,7 @@
               <li class="contacts-row">
                 <img
                   class="contacts-img"
-                  src="source/img/contacts/mail.svg"
+                  src="source/o-nas/img/mail.svg"
                   alt="электронная почта фотосалона"
                 />
                 <a href="mailto:fuji32@bk.ru" class="contacts-text"> fuji32@bk.ru</a>
@@ -160,7 +160,7 @@
               <li class="contacts-row">
                 <img
                   class="contacts-img"
-                  src="source/img/contacts/address.png"
+                  src="source/o-nas/img/address.png"
                   alt="фотосалон на карте"
                 />
                 <span class="contacts-text"
@@ -209,7 +209,7 @@
             <div class="block-card contacts-card">
               <img
                 class="block-card-img"
-                src="source/img/contacts/step1.png"
+                src="source/o-nas/img/step1.png"
                 alt="фотосалон находится в доме быта"
               />
               <p class="block-card-text">1. Заходим</p>
@@ -222,7 +222,7 @@
 
               <img
                 class="block-card-img"
-                src="source/img/contacts/step2.png"
+                src="source/o-nas/img/step2.png"
                 alt="идем к фотосалону"
               />
             </div>
@@ -231,7 +231,7 @@
 
               <img
                 class="block-card-img"
-                src="source/img/contacts/step3.png"
+                src="source/o-nas/img/step3.png"
                 alt="поднимаемся к фотосалону"
               />
             </div>
@@ -241,7 +241,7 @@
               </p>
               <img
                 class="block-card-img"
-                src="source/img/contacts/step4.png"
+                src="source/o-nas/img/step4.png"
                 alt="поворачиваем к фотосалону"
               />
             </div>
@@ -249,7 +249,7 @@
               <p class="block-card-text">5. Проходим коридор</p>
               <img
                 class="block-card-img"
-                src="source/img/contacts/step5.png"
+                src="source/o-nas/img/step5.png"
                 alt="проходим коридор до фотосалона"
               />
             </div>
@@ -257,7 +257,7 @@
               <p class="block-card-text">6. Ура! Мы пришли!</p>
               <img
                 class="block-card-img"
-                src="source/img/contacts/step6.png"
+                src="source/o-nas/img/step6.png"
                 alt="пришли в фотосалон"
               />
             </div>
