--- a/proyavka-plyonki.html
+++ b/proyavka-plyonki.html
@@ -7,7 +7,7 @@
       name="description"
       content="Приходите в Фотосалон Фуджи, у нас доступна: проявка плёнки, оцифровка плёнки. Качественно и недорого!"
     />
-    <title>Фото на документы в Брянске</title>
+    <title>Проявка плёнки в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/proyavka-plyonki/style.css" />
     <!-- Yandex.Metrika counter -->
@@ -73,7 +73,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -89,7 +89,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
