--- a/ocifrovka-videokasset.html
+++ b/ocifrovka-videokasset.html
@@ -7,7 +7,7 @@
       name="description"
       content="Приходите к нам, если нужна оцифровка видеокассет, оцифровка киноплёнки! Качественно и недорого!"
     />
-    <title>Фото на документы в Брянске</title>
+    <title>Оцифровка видеокассет и коноплёнок в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/ocifrovka-videokasset/style.css" />
     <!-- Yandex.Metrika counter -->
@@ -73,7 +73,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -89,7 +89,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
@@ -149,7 +149,6 @@
           </div>
           <p class="block-content-text">
             Для уточнения информации звоните по телефону
-
             <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
             или пишите на почту
             <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
