--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -7,7 +7,7 @@
       name="description"
       content="Фотопечать в Брянске: распечатать картинки, цветная печать недорого"
     />
-    <title>Фото на документы в Брянске</title>
+    <title>Печать фото в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/pechat-foto/style.css" />
     <!-- Yandex.Metrika counter -->
@@ -73,7 +73,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -89,7 +89,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
@@ -134,8 +134,11 @@
                 <a href="mailto:fuji32@bk.ru" class="contacts-text mail">
                   fuji32@bk.ru</a
                 >
-                онлайн заказ. Не забудьте указать в электронном письме формат
-                фотографий и телефон для связи.
+                онлайн заказ. Не забудьте указать в электронном письме
+                <a href="#block-cards" class="contacts-text mail">
+                  формат</a
+                > 
+                фотографий и телефон для связи. Как будет готово, мы вам перезвоним.
               </p>
             </div>
           </div>
