--- a/poligrafiya.html
+++ b/poligrafiya.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Предлагаем полиграфические услуги: фотокерамика, печатать на различных поверхностях, включая дерево, ткань одежды">
-    <title>Фото на документы в Брянске</title>
+    <title>Полиграфия в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/poligrafiya/style.css" />
     <!-- Yandex.Metrika counter -->
@@ -70,7 +70,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -86,7 +86,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
@@ -118,7 +118,8 @@
                     src="source/poligrafiya/img/cap.png"
                     alt="печать на кружках"
                   />
-                  <p class="block-card-text">Печать на кружках</p>
+                  <p class="block-card-text">Печать на кружках 
+                  кружка + печать = 380руб</p>
                 </div>
                 <div class="block-card">
                   <img
@@ -126,7 +127,9 @@
                     src="source/poligrafiya/img/wood.png"
                     alt="печать на дереве"
                   />
-                  <p class="block-card-text">Печать на дереве</p>
+                  <p class="block-card-text">Печать на дереве <br>
+                    10 х 10 см - 140 руб
+                  </p>
                 </div>
                 <div class="block-card">
                   <img
@@ -134,9 +137,17 @@
                     src="source/poligrafiya/img/short.png"
                     alt="печать на футболках"
                   />
-                  <p class="block-card-text">Печать на футболках</p>
+                  <p class="block-card-text">Печать на футболках
+                    футболка + печать = 900руб
+                  </p>
                 </div>
               </div>
+              <p class="block-content-text">
+                Для уточнения информации звоните по телефону
+                <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
+                или пишите на почту
+                <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
+              </p>
             </div>
           </section>
       <footer>
