--- a/vosstanovlenie-foto.html
+++ b/vosstanovlenie-foto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Восстановление фото, реставрация и разукрашивание старых фотографий">
-    <title>Фото на документы в Брянске</title>
+    <title>Восстановление фото в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/vosstanovlenie-foto/style.css" />
     <!-- Yandex.Metrika counter -->
@@ -69,7 +69,7 @@
         <img
           class="burger-img"
           id="burger-img"
-          src="source/img/header/burger.svg"
+          src="source/header/burger.svg"
           alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
@@ -85,7 +85,7 @@
           </nav>
           <img
             class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
+            src="source/header/cross.svg"
             alt="фото в брянске"
           />
         </div>
