--- a/aksessuary.html
+++ b/aksessuary.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки, фотокниги и проч.">
     <title>Аксессуары фотосалона Фуджи</title>
     <link rel="stylesheet" href="common-style.css" />
-    <link rel="stylesheet" href="/source/aksessuary/style.css" />
+    <link rel="stylesheet" href="source/aksessuary/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
