--- a/poligrafiya.html
+++ b/poligrafiya.html
@@ -137,7 +137,7 @@
                     src="source/poligrafiya/img/short.png"
                     alt="печать на футболках"
                   />
-                  <p class="block-card-text">Печать на футболках
+                  <p class="block-card-text">Печать на футболках <br>
                     футболка + печать = 900руб
                   </p>
                 </div>
