--- a/foto-na-dokumenty.html
+++ b/foto-na-dokumenty.html
@@ -76,6 +76,7 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
+            <a href="index.html">Главная</a>
             <a href="#photo-for-documents">Фото на документы</a>
             <a href="poligrafiya.html">Полиграфия</a>
             <a href="pechat-foto.html">Печать фото</a>
