--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -78,6 +78,7 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
+            <a href="index.html">Главная</a>
             <a href="foto-na-dokumenty.html">Фото на документы</a>
             <a href="poligrafiya.html">Полиграфия</a>
             <a href="#print">Печать фото</a>
