--- a/poligrafiya.html
+++ b/poligrafiya.html
@@ -75,6 +75,7 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
+            <a href="index.html">Главная</a>
             <a href="foto-na-dokumenty.html">Фото на документы</a>
             <a href="#polygraphy">Полиграфия</a>
             <a href="pechat-foto.html">Печать фото</a>
