повесил ещё один класс на текст в контактах

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             >
             </iframe>
           </div>
-          <p class="contacts-text">
+          <p class="contacts-text block-content-text">
             Дом быта большой... Как найти наш магазин? Держите гайд:
           </p>
           <div class="block-cards">
