--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
         </div>
         <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <a class="title" href="index.html">Фотосалон Фуджи</a>
+          <a class="title" href="#about-us">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
     </header>
     <main class="close-burger-menu">
-      <section class="about-us">
+      <section class="about-us" id="about-us">
         <div class="about-us-content">
           <div class="about-us-content-main">
             <h2 class="about-us-content-main-text1">
