--- a/poligrafiya.html
+++ b/poligrafiya.html
@@ -119,7 +119,7 @@
                     src="source/poligrafiya/img/cap.png"
                     alt="печать на кружках"
                   />
-                  <p class="block-card-text">Печать на кружках 
+                  <p class="block-card-text">Печать на кружках <br>
                   кружка + печать = 380руб</p>
                 </div>
                 <div class="block-card">
@@ -138,7 +138,7 @@
                     src="source/poligrafiya/img/short.png"
                     alt="печать на футболках"
                   />
-                  <p class="block-card-text">Печать на футболках <br>
+                  <p class="block-card-text tee-shirt">Печать на футболках <br>
                     футболка + печать = 900руб
                   </p>
                 </div>
