убираем тествой сайт из индексации

--- a/aksessuary.html
+++ b/aksessuary.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки, фотокниги и проч.">
     <title>Аксессуары фотосалона Фуджи</title>
+    <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/aksessuary/style.css" />
     <!-- Yandex.Metrika counter -->
