--- a/proyavka-plyonki.html
+++ b/proyavka-plyonki.html
@@ -123,17 +123,23 @@
             </div>
             <div>
               <p class="film-development-text-p">
-                В нашем фотосалоне вы можете проявить и оцифровать фотоплёну
-                различного типа: узкие (135мм), широкие (120мм/220мм), листовые
-                пленки 9x12, 13x18, 18x24 и т.д. Мы проявляем в специальной
-                фотолаборатории с помощью японского обородувания компании
+                Мода на 90е вернулась, а вместе с ней и плёночные фотографии! И это неспроста,
+                ведь фото, сделанное на плёнку, выглядит живее и естественнее цифрового аналога.
+                В нашем фотосалоне вы можете проявить и оцифровать фотоплёну по процессу C-41 — 
+                это стандарт обработки цветных плёнок шириною 35 мм. 
+                Мы проявляем в специальной
+                фотолаборатории с помощью японского обородувания компании 
                 <span>Fujifilm</span>.
+                <!-- различного типа: узкие (135мм), широкие (120мм/220мм), листовые
+                пленки 9x12, 13x18, 18x24 и т.д. Мы проявляем в специальной
+                фотолаборатории с помощью японского обородувания компании 
+                <span>Fujifilm</span>.-->
               </p>
               <p class="film-development-text-p">
                 Для уточнения информации звоните по телефону
                 <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
                 или пишите на почту
-                <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
+                <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>.
               </p>
             </div>
           </div>
