фикс раздела Оцифровка

--- a/ocifrovka-videokasset.html
+++ b/ocifrovka-videokasset.html
@@ -111,14 +111,14 @@
         <div class="block-content">
           <h3 class="block-content-title">Оцифровка</h3>
           <p class="block-content-text">
-            Как оцифровать видеокассету? - Обращайтесь к нам! Наши специалисты
+            Как оцифровать видеокассету? — Обращайтесь к нам! Наши специалисты
             могут качественно и недорого оцифровать видеокассету любого типа:
-            VHS, VHS-C, JVS и т.д. На нашем оборудовании мы удалим шумы и
-            восстановим цветовой баланс!
+            VHS, VHS-C, JVS и т.д. Оцифровываем без искажений с сохранностью
+            всех деталей.
           </p>
           <p class="block-content-text">
-            Также доступна оцифровка киноплёнки - приносите записи длиной от 10
-            минут.
+            Также доступна оцифровка киноплёнки! Запись длиною до 10 минут —
+            1200 рублей, после 10 минут — 120 рублей за минуту.
           </p>
           <div class="block-cards">
             <div class="block-card">
@@ -143,8 +143,10 @@
                 src="source/ocifrovka-videokasset/img/film.png"
                 alt="печать на футболках"
               />
-              <p class="block-card-text">
-                Киноплёнка - 120 руб/час<br />Длина записи > 10 мин
+              <p class="block-card-text film">
+                Киноплёнка. <br />
+                Запись до 10 мин - 1200 руб, <br />
+                далее 120 руб/мин
               </p>
             </div>
           </div>
