--- a/aksessuary.html
+++ b/aksessuary.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки и проч.">
+    <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки и многое другое!">
     <title>Аксессуары фотосалона Фуджи</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/aksessuary/style.css" />
