--- a/proyavka-plyonki.html
+++ b/proyavka-plyonki.html
@@ -125,10 +125,10 @@
               <p class="film-development-text-p">
                 Мода на 90е вернулась, а вместе с ней и плёночные фотографии! И это неспроста,
                 ведь фото, сделанное на плёнку, выглядит живее и естественнее цифрового аналога.
-                В нашем фотосалоне вы можете проявить и оцифровать фотоплёну по процессу C-41 — 
+                В нашем фотосалоне вы можете проявить и оцифровать фотоплёнку по процессу C-41 — 
                 это стандарт обработки цветных плёнок шириною 35 мм. 
                 Мы проявляем в специальной
-                фотолаборатории с помощью японского обородувания компании 
+                фотолаборатории с помощью японского оборудования компании 
                 <span>Fujifilm</span>.
                 <!-- различного типа: узкие (135мм), широкие (120мм/220мм), листовые
                 пленки 9x12, 13x18, 18x24 и т.д. Мы проявляем в специальной
