--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -151,7 +151,7 @@
                 src="source/pechat-foto/img/10x15.png"
                 alt="фото 10 на 15"
               />
-              <p class="block-card-text">10x15<br />25 руб</p>
+              <p class="block-card-text">10x15<br/>25 руб <br> лаб. печать</p>
             </div>
             <div class="block-card">
               <img
@@ -159,7 +159,7 @@
                 src="source/pechat-foto/img/15x21.png"
                 alt="фото 15 на 21"
               />
-              <p class="block-card-text">15x21<br />48 руб</p>
+              <p class="block-card-text">15x21<br />48 руб<br> лаб. печать</p>
             </div>
             <div class="block-card">
               <img
