море фиксов: облегчил карты, перенёс скрипт в начало, переписал дискрипшн

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Фотоуслуги в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/o-nas/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -105,9 +106,9 @@
       <section class="about-us" id="about-us">
         <div class="about-us-content">
           <div class="about-us-content-main">
-            <h2 class="about-us-content-main-text1">
+            <h1 class="about-us-content-main-text1">
               Весь спектр фотоуслуг в одном магазине
-            </h2>
+            </h1>
             <img
               class="about-us-planshet"
               src="source/o-nas/img/about-us-planshet.png"
@@ -135,7 +136,6 @@
       </section>
       <section class="block contacts" id="contacts">
         <div class="block-content block-content-contracts">
-          <!-- <h3 class="block-content-title">Контакты</h3> -->
           <div class="block-content-text">
             <ul class="contacts-list">
               <li class="contacts-row">
@@ -155,7 +155,9 @@
                   src="source/o-nas/img/mail.svg"
                   alt="электронная почта фотосалона"
                 />
-                <a href="mailto:fuji32@bk.ru" class="contacts-text"> fuji32@bk.ru</a>
+                <a href="mailto:fuji32@bk.ru" class="contacts-text">
+                  fuji32@bk.ru</a
+                >
               </li>
               <li class="contacts-row">
                 <img
@@ -169,40 +171,13 @@
               </li>
             </ul>
           </div>
-          <div class="map" style="position: relative; overflow: hidden">
-            <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
-                  style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
-            <a
-              href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps"
-              style="
-                color: #eee;
-                font-size: 12px;
-                position: absolute;
-                top: 14px;
-              "
-              >Торговый центр в Брянске</a
-            >
-            <a
-              href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps"
-              style="
-                color: #eee;
-                font-size: 12px;
-                position: absolute;
-                top: 28px;
-              "
-              >Продажа и аренда коммерческой недвижимости в Брянске</a
-            >
-            <iframe
-              src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC"
-              width="100%"
-              height="380"
-              frameborder="1"
-              allowfullscreen="true"
-              style="position: relative"
-            >
-            </iframe>
-          </div>
-          <p class="contacts-text block-content-text">
+          <iframe
+            class="map"
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3A9fb2ecb87ec1f5262e9bee792f4473a9e160783cf61ee6f995366f184bab6012&amp;source=constructor"
+            frameborder="0"
+            a
+          ></iframe>
+          <p class="block-content-text">
             Дом быта большой... Как найти наш магазин? Держите гайд:
           </p>
           <div class="block-cards">
@@ -269,5 +244,4 @@
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
