--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Фотопечать в Брянске: распечатать картинки, цветная печать недорого"
+      content="Фотопечать в Брянске: распечатать картинки, цветная печать а4 и других форматов, недорого и качественно!"
     />
     <title>Печать фото в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/pechat-foto/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -109,7 +110,7 @@
     <main class="close-burger-menu">
       <section class="block print" id="print">
         <div class="block-content">
-          <h2 class="block-content-title">Печать фото</h2>
+          <h1 class="block-content-title">Печать фото</h1>
           <div class="print-content">
             <div class="print-content-bottom-card">
               <img
@@ -136,10 +137,9 @@
                   fuji32@bk.ru</a
                 >
                 онлайн заказ. Не забудьте указать в электронном письме
-                <a href="#block-cards" class="contacts-text mail">
-                  формат</a
-                > 
-                фотографий и телефон для связи. Как будет готово, мы вам перезвоним.
+                <a href="#block-cards" class="contacts-text mail"> формат</a>
+                фотографий и телефон для связи. Как будет готово, мы вам
+                перезвоним.
               </p>
             </div>
           </div>
@@ -151,7 +151,10 @@
                 src="source/pechat-foto/img/10x15.png"
                 alt="фото 10 на 15"
               />
-              <p class="block-card-text">10x15<br/>25 руб <br> лаб. печать</p>
+              <p class="block-card-text">
+                10x15<br />25 руб <br />
+                лаб. печать
+              </p>
             </div>
             <div class="block-card">
               <img
@@ -159,7 +162,10 @@
                 src="source/pechat-foto/img/15x21.png"
                 alt="фото 15 на 21"
               />
-              <p class="block-card-text">15x21<br />48 руб<br> лаб. печать</p>
+              <p class="block-card-text">
+                15x21<br />48 руб<br />
+                лаб. печать
+              </p>
             </div>
             <div class="block-card">
               <img
@@ -193,5 +199,4 @@
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
