--- a/poligrafiya.html
+++ b/poligrafiya.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Предлагаем полиграфические услуги: печатать на различных поверхностях, включая дерево, ткань одежды">
+    <meta
+      name="description"
+      content="Предлагаем полиграфические услуги: печать на древесине, на футболках, на кружках - качественно и недорого!"
+    />
     <title>Полиграфия в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/poligrafiya/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -104,57 +108,61 @@
       </div>
     </header>
     <main class="close-burger-menu">
-        <section class="block polygraphy" id="polygraphy">
-            <div class="block-content">
-              <h3 class="block-content-title">Полиграфия</h3>
-              <p class="block-content-text">
-                  Если вам нужна полиграфическая продукция, смело обращайтесь в Фотосалон Фуджи!
-                  По вашему заказу сделаем печать фото на кружке, принт на футболку,
-                  распечатаем изображение на дереве и много чего ещё!  
-                </p>
-              <div class="block-cards">
-                <div class="block-card">
-                  <img
-                    class="block-card-img"
-                    src="source/poligrafiya/img/cap.png"
-                    alt="печать на кружках"
-                  />
-                  <p class="block-card-text">Печать на кружках <br>
-                  кружка + печать = 380руб</p>
-                </div>
-                <div class="block-card">
-                  <img
-                    class="block-card-img"
-                    src="source/poligrafiya/img/wood.png"
-                    alt="печать на дереве"
-                  />
-                  <p class="block-card-text">Печать на дереве <br>
-                    10 х 10 см - 140 руб
-                  </p>
-                </div>
-                <div class="block-card">
-                  <img
-                    class="block-card-img"
-                    src="source/poligrafiya/img/short.png"
-                    alt="печать на футболках"
-                  />
-                  <p class="block-card-text tee-shirt">Печать на футболках <br>
-                    футболка + печать = 900руб
-                  </p>
-                </div>
-              </div>
-              <p class="block-content-text">
-                Для уточнения информации звоните по телефону
-                <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
-                или пишите на почту
-                <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
+      <section class="block polygraphy" id="polygraphy">
+        <div class="block-content">
+          <h1 class="block-content-title">Полиграфия</h1>
+          <p class="block-content-text">
+            Если вам нужна полиграфическая продукция, смело обращайтесь в
+            Фотосалон Фуджи! По вашему заказу сделаем печать фото на кружке,
+            принт на футболку, распечатаем изображение на дереве и много чего
+            ещё!
+          </p>
+          <div class="block-cards">
+            <div class="block-card">
+              <img
+                class="block-card-img"
+                src="source/poligrafiya/img/cap.png"
+                alt="печать на кружках"
+              />
+              <p class="block-card-text">
+                Печать на кружках <br />
+                кружка + печать = 380руб
               </p>
             </div>
-          </section>
+            <div class="block-card">
+              <img
+                class="block-card-img"
+                src="source/poligrafiya/img/wood.png"
+                alt="печать на дереве"
+              />
+              <p class="block-card-text">
+                Печать на дереве <br />
+                10 х 10 см - 140 руб
+              </p>
+            </div>
+            <div class="block-card">
+              <img
+                class="block-card-img"
+                src="source/poligrafiya/img/short.png"
+                alt="печать на футболках"
+              />
+              <p class="block-card-text tee-shirt">
+                Печать на футболках <br />
+                футболка + печать = 900руб
+              </p>
+            </div>
+          </div>
+          <p class="block-content-text">
+            Для уточнения информации звоните по телефону
+            <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
+            или пишите на почту
+            <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
+          </p>
+        </div>
+      </section>
       <footer>
         <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
