--- a/vosstanovlenie-foto.html
+++ b/vosstanovlenie-foto.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Восстановление фото, реставрация и разукрашивание старых фотографий">
+    <meta
+      name="description"
+      content="Восстановление фото, реставрация и разукрашивание старых фотографий"
+    />
     <title>Восстановление фото в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/vosstanovlenie-foto/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -107,8 +111,9 @@
         <div class="block-content">
           <h1 class="block-content-title">Восстановление фото</h1>
           <p class="block-content-text">
-            Как восстановить старые фотографии, когда время отнеслось к ним безжалостно?
-            - Срочно нести к нам! Наши профи смогут качественно отреставрировать фото, вернуть былой цвет и исправить дефекты. 
+            Как восстановить старые фотографии, когда время отнеслось к ним
+            безжалостно? - Срочно нести к нам! Наши профи смогут качественно
+            отреставрировать фото, вернуть былой цвет и исправить дефекты.
           </p>
           <div class="block-cards">
             <div class="block-card recovery-card">
@@ -140,5 +145,4 @@
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
