--- a/aksessuary.html
+++ b/aksessuary.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки и многое другое!">
+    <meta
+      name="description"
+      content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки и многое другое!"
+    />
     <title>Аксессуары фотосалона Фуджи</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/aksessuary/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -48,101 +52,101 @@
 
   <body>
     <header id="header">
-        <div class="header-content">
-          <nav class="menu">
-            <div>
-              <a href="foto-na-dokumenty.html">Фото на документы</a>
-              <a href="poligrafiya.html">Полиграфия</a>
-            </div>
-            <div>
-              <a href="pechat-foto.html">Печать фото</a>
-              <a href="#accessories">Аксессуары</a>
-            </div>
-            <div>
-              <a href="vosstanovlenie-foto.html">Восстановление фото</a>
-              <a href="proyavka-plyonki.html">Проявка плёнки</a>
-            </div>
-            <div>
-              <a href="ocifrovka-videokasset.html">Оцифровка</a>
-              <a href="index.html#contacts">Контакты</a>
-            </div>
+      <div class="header-content">
+        <nav class="menu">
+          <div>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
+          </div>
+          <div>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="#accessories">Аксессуары</a>
+          </div>
+          <div>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+          </div>
+          <div>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
+          </div>
+        </nav>
+        <img
+          class="burger-img"
+          id="burger-img"
+          src="source/header/burger.svg"
+          alt="меню фотоуслуг"
+        />
+        <div class="burger" id="burger">
+          <nav class="burger-menu close-burger-menu">
+            <a href="index.html">Главная</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            <a href="#accessories">Аксессуары</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
-            class="burger-img"
-            id="burger-img"
-            src="source/header/burger.svg"
-            alt="меню фотоуслуг"
+            class="close-burger-menu burger-cross"
+            src="source/header/cross.svg"
+            alt="фото в брянске"
           />
-          <div class="burger" id="burger">
-            <nav class="burger-menu close-burger-menu">
-              <a href="index.html">Главная</a>
-              <a href="foto-na-dokumenty.html">Фото на документы</a>
-              <a href="poligrafiya.html">Полиграфия</a>
-              <a href="pechat-foto.html">Печать фото</a>
-              <a href="proyavka-plyonki.html">Проявка плёнки</a>
-              <a href="#accessories">Аксессуары</a>
-              <a href="vosstanovlenie-foto.html">Восстановление фото</a>
-              <a href="ocifrovka-videokasset.html">Оцифровка</a>
-              <a href="index.html#contacts">Контакты</a>
-            </nav>
-            <img
-              class="close-burger-menu burger-cross"
-              src="source/header/cross.svg"
-              alt="фото в брянске"
-            />
-          </div>
-          <div class="schedule">
-            <p>пн - пт: 09:00 - 19:00</p>
-            <p>сб: 10:00 - 18:00</p>
-            <p>вс: 12:00 - 18:00</p>
-          </div>
-          <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
-          <div class="logo">
-            <a class="title" href="index.html">Фотосалон Фуджи</a>
-            <p>Брянск, Центральный дом быта, 2 этаж</p>
+        </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
+        <div class="logo">
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
+          <p>Брянск, Центральный дом быта, 2 этаж</p>
+        </div>
+      </div>
+    </header>
+    <main class="close-burger-menu">
+      <section class="block accessories" id="accessories">
+        <div class="block-content">
+          <h1 class="block-content-title">Аксессуары</h1>
+          <p class="block-content-text">
+            Обращайтесь к нам за любыми товарами в сфере фото! Купить штатив,
+            подобрать нестандартную фоторамку, приобрести батарейки,
+            аккумуляторы или выбрать альбом — всё это можно осуществить у нас!
+          </p>
+          <div class="block-cards">
+            <div class="block-card">
+              <img
+                class="block-card-img"
+                src="source/aksessuary/img/alboms.png"
+                alt="альбомы"
+              />
+              <p class="block-card-text">Фотоальбомы</p>
+            </div>
+            <div class="block-card">
+              <img
+                class="block-card-img"
+                src="source/aksessuary/img/battaries.png"
+                alt="батарейки"
+              />
+              <p class="block-card-text">Батарейки</p>
+            </div>
+            <div class="block-card">
+              <img
+                class="block-card-img"
+                src="source/aksessuary/img/photoframe.png"
+                alt="фоторамки"
+              />
+              <p class="block-card-text">Фоторамки</p>
+            </div>
           </div>
         </div>
-      </header>
-    <main class="close-burger-menu">
-        <section class="block accessories" id="accessories">
-            <div class="block-content">
-              <h3 class="block-content-title">Аксессуары</h3>
-              <p class="block-content-text">
-                 Обращайтесь к нам за любыми товарами в сфере фото! Купить штатив, подобрать нестандартную фоторамку,
-                приобрести батарейки, аккумуляторы или выбрать альбом — всё это можно осуществить у нас!
-              </p>
-              <div class="block-cards">
-                <div class="block-card">
-                  <img
-                    class="block-card-img"
-                    src="source/aksessuary/img/alboms.png"
-                    alt="альбомы"
-                  />
-                  <p class="block-card-text">Фотоальбомы</p>
-                </div>
-                <div class="block-card">
-                  <img
-                    class="block-card-img"
-                    src="source/aksessuary/img/battaries.png"
-                    alt="батарейки"
-                  />
-                  <p class="block-card-text">Батарейки</p>
-                </div>
-                <div class="block-card">
-                  <img
-                    class="block-card-img"
-                    src="source/aksessuary/img/photoframe.png"
-                    alt="фоторамки"
-                  />
-                  <p class="block-card-text">Фоторамки</p>
-                </div>
-              </div>
-            </div>
-          </section>
+      </section>
       <footer>
         <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
