--- a/foto-na-dokumenty.html
+++ b/foto-na-dokumenty.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Сделать срочное фото на документы, на паспорт, на загранпаспорт в Брянске">
+    <meta
+      name="description"
+      content="Сделать срочное фото на документы: паспорт, виза, 3х4, 4х6, 9х12 и т.д. - в Брянске"
+    />
     <title>Фото на документы в Брянске</title>
     <link rel="stylesheet" href="source/foto-na-dokumenty/style.css" />
     <link rel="stylesheet" href="common-style.css" />
-    
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -36,14 +39,15 @@
         accurateTrackBounce: true,
       });
     </script>
-    <noscript
-      ><div>
+    <noscript>
+      <div>
         <img
           src="https://mc.yandex.ru/watch/87188710"
           style="position: absolute; left: -9999px"
           alt=""
-        /></div
-    ></noscript>
+        />
+      </div>
+    </noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
 
@@ -110,49 +114,29 @@
           <h1 class="block-content-title">Фото на документы</h1>
           <div class="photo-for-documents-text">
             <p class="block-content-text">
-              Где сфотографироваться на документы в Брянске качественно и быстро? Конечно же в фотосалоне Фуджи! Здесь вы можете сделать фото на паспорт, загран, медкнижку, приписное, водительское удостоверение и т.д.
+              Где сфотографироваться на документы в Брянске качественно и
+              быстро? Конечно же в фотосалоне Фуджи! Здесь вы можете сделать
+              фото на паспорт, загран, медкнижку, приписное, водительское
+              удостоверение и т.д.
             </p>
             <p class="block-content-text">
-              Приходить в служебной форме или строгом костюме совсем не обязательно: 
-              наши мастера подставят нужную одежду прямо на фото (цена опции - 50 рублей). 
-              У нас в базе есть формы для всевозможных организаций и служб, а также классические костюмы.
+              Приходить в служебной форме или строгом костюме совсем не
+              обязательно: наши мастера подставят нужную одежду прямо на фото
+              (цена опции - 50 рублей). У нас в базе есть формы для всевозможных
+              организаций и служб, а также классические костюмы.
             </p>
             <p class="block-content-text">
-              Мы находимся по адресу: <a class="address" href="index.html#contacts">пр.Ленина 67, Центральны Дом Быта, 2 этаж</a>
+              Мы находимся по адресу:
+              <a class="address" href="index.html#contacts"
+                >пр.Ленина 67, Центральны Дом Быта, 2 этаж</a
+              >
             </p>
-            <div class="map" style="position: relative; overflow: hidden; margin-bottom: calc(80px * var(--size-coeff));">
-              <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
-                    style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
-              <a
-                href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps"
-                style="
-                  color: #eee;
-                  font-size: 12px;
-                  position: absolute;
-                  top: 14px;
-                "
-                >Торговый центр в Брянске</a
-              >
-              <a
-                href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps"
-                style="
-                  color: #eee;
-                  font-size: 12px;
-                  position: absolute;
-                  top: 28px;
-                "
-                >Продажа и аренда коммерческой недвижимости в Брянске</a
-              >
-              <iframe
-                src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC"
-                width="100%"
-                height="380"
-                frameborder="1"
-                allowfullscreen="true"
-                style="position: relative"
-              >
-              </iframe>
-            </div>
+            <iframe
+              class="map"
+              src="https://yandex.ru/map-widget/v1/?um=constructor%3A9fb2ecb87ec1f5262e9bee792f4473a9e160783cf61ee6f995366f184bab6012&amp;source=constructor"
+              frameborder="0"
+              a
+            ></iframe>
             <p class="block-content-text">
               Печатаем фото блоками в зависимости от формата:
             </p>
@@ -233,5 +217,4 @@
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
