--- a/ocifrovka-videokasset.html
+++ b/ocifrovka-videokasset.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Приходите к нам, если нужна оцифровка видеокассет, оцифровка киноплёнки! Качественно и недорого!"
+      content="Приходите к нам за оцифровкой видеокассет и киноплёнок! Качественно и недорого!"
     />
     <title>Оцифровка видеокассет и коноплёнок в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/ocifrovka-videokasset/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -109,7 +110,7 @@
     <main class="close-burger-menu">
       <section class="block digitization" id="digitization">
         <div class="block-content">
-          <h3 class="block-content-title">Оцифровка</h3>
+          <h1 class="block-content-title">Оцифровка</h1>
           <p class="block-content-text">
             Как оцифровать видеокассету? — Обращайтесь к нам! Наши специалисты
             могут качественно и недорого оцифровать видеокассету любого типа:
@@ -163,5 +164,4 @@
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
