--- a/proyavka-plyonki.html
+++ b/proyavka-plyonki.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Приходите в Фотосалон Фуджи, у нас доступна: проявка плёнки, оцифровка плёнки. Качественно и недорого!"
+      content="Приходите в Фотосалон Фуджи, у нас можно купить, проявить и оцифровать фотоплёнку! Качественно и недорого!"
     />
     <title>Проявка плёнки в Брянске</title>
     <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="source/proyavka-plyonki/style.css" />
+    <script src="script.js"></script>
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -109,7 +110,7 @@
     <main class="close-burger-menu">
       <section class="block film-development" id="film-development">
         <div class="block-content">
-          <h2 class="block-content-title">Проявка плёнки</h2>
+          <h1 class="block-content-title">Проявка плёнки</h1>
           <div class="film-development-content">
             <div class="film-development-content-bottom-card">
               <img
@@ -124,10 +125,11 @@
             </div>
             <div>
               <p class="film-development-text-p">
-                Мода на 90е вернулась, а вместе с ней и плёночные фотографии! И это неспроста,
-                ведь фото, сделанное на плёнку, выглядит живее и естественнее цифрового аналога.
-                В нашем фотосалоне вы можете купить, проявить и оцифровать фотоплёнку по процессу C-41 — 
-                это стандарт обработки цветных плёнок шириною 35 мм. 
+                Мода на 90е вернулась, а вместе с ней и плёночные фотографии! И
+                это неспроста, ведь фото, сделанное на плёнку, выглядит живее и
+                естественнее цифрового аналога. В нашем фотосалоне вы можете
+                купить, проявить и оцифровать фотоплёнку по процессу C-41 — это
+                стандарт обработки цветных плёнок шириною 35 мм.
               </p>
               <p class="film-development-text-p">
                 Для уточнения информации звоните по телефону
@@ -144,5 +146,4 @@
       </footer>
     </main>
   </body>
-  <script src="script.js"></script>
 </html>
