--- a/foto-na-dokumenty.html
+++ b/foto-na-dokumenty.html
@@ -33,21 +33,20 @@
         "ym"
       );
 
-      ym(87188710, "init", {
+      ym(87914357, "init", {
         clickmap: true,
         trackLinks: true,
         accurateTrackBounce: true,
       });
     </script>
-    <noscript>
-      <div>
+    <noscript
+      ><div>
         <img
-          src="https://mc.yandex.ru/watch/87188710"
+          src="https://mc.yandex.ru/watch/87914357"
           style="position: absolute; left: -9999px"
           alt=""
-        />
-      </div>
-    </noscript>
+        /></div
+    ></noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
 
