--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             <a href="ocifrovka-videokasset.html">Оцифровка</a>
             <a href="#contacts">Контакты</a>
           </div>
+          <div>
+            <a href="bessmertnyj-polk.html">Бессмертный полк</a>
+          </div>
         </nav>
         <img
           class="burger-img"
@@ -90,6 +93,7 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
+            <a href="bessmertnyj-polk.html">Бессмертный полк</a>
             <a href="foto-na-dokumenty.html">Фото на документы</a>
             <a href="poligrafiya.html">Полиграфия</a>
             <a href="pechat-foto.html">Печать фото</a>
