--- a/bessmertnyj-polk.html
+++ b/bessmertnyj-polk.html
@@ -33,7 +33,7 @@
         "ym"
       );
 
-      ym(87914844, "init", {
+      ym(88593224, "init", {
         clickmap: true,
         trackLinks: true,
         accurateTrackBounce: true,
@@ -42,7 +42,7 @@
     <noscript
       ><div>
         <img
-          src="https://mc.yandex.ru/watch/87914844"
+          src="https://mc.yandex.ru/watch/88593224"
           style="position: absolute; left: -9999px"
           alt=""
         /></div
@@ -83,7 +83,9 @@
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
             <a href="index.html">Главная</a>
-            <a href="bessmertnyj-polk.html#immortal-regiment">Бессмертный полк</a>
+            <a href="bessmertnyj-polk.html#immortal-regiment"
+              >Бессмертный полк</a
+            >
             <a href="foto-na-dokumenty.html">Фото на документы</a>
             <a href="poligrafiya.html">Полиграфия</a>
             <a href="pechat-foto.html">Печать фото</a>
