--- a/bessmertnyj-polk.html
+++ b/bessmertnyj-polk.html
@@ -161,7 +161,7 @@
         </div>
       </section>
       <footer>
-        <p>&copy 1994 - 2022 Брянск</p>
+        <p>1994 - 2023 Брянск</p>
       </footer>
     </main>
   </body>
