--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -199,7 +199,7 @@
         </div>
       </section>
       <footer>
-        <p>&copy 1994 - 2022 Брянск</p>
+        <p>1994 - 2023 Брянск</p>
       </footer>
     </main>
   </body>
